<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/edit_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/business_name"
                android:textColor="#3D3D3D"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/business_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/contact_details_edit_text_background"
                android:hint="@string/business_name_hint"
                android:inputType="textCapWords"
                android:paddingLeft="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chain_name_text"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/chain_name_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:button="@drawable/check_box_selector" />
            </LinearLayout>

            <TextView
                android:id="@+id/chain_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/contact_details_edit_text_background"
                android:hint="Chain Name"
                android:paddingLeft="8dp"
                android:textColor="#3D3D3D"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:text="@string/address_text" />

            <EditText
                android:id="@+id/address_line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/contact_details_edit_text_background"
                android:hint="@string/address_hint_one"
                android:inputType="textCapWords"
                android:padding="8dp" />

            <EditText
                android:id="@+id/address_line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/contact_details_edit_text_background"
                android:hint="@string/address_hint_two"
                android:inputType="textCapWords"
                android:padding="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="Landmark"
                android:textColor="#3D3D3D"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/contact_details_edit_text_background"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/landmarks_layout"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:orientation="vertical" >
                </LinearLayout>

                <EditText
                    android:id="@+id/landmark_input"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="City (*)"
                android:textColor="#3D3D3D"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/city_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/contact_details_edit_text_background"
                android:hint="City"
                android:inputType="textPostalAddress"
                android:padding="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="Pincode (*)"
                android:textColor="#3D3D3D"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pin_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/contact_details_edit_text_background"
                android:hint="600119"
                android:inputType="numberDecimal"
                android:maxLength="6"
                android:padding="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="State (*)"
                android:textColor="#3D3D3D"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/state_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/contact_details_edit_text_background"
                android:hint="Andhra pradesh"
                android:inputType="textCapWords"
                android:padding="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="Primary Mobile Number (*)"
                android:textColor="#3D3D3D"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/contact_details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="+91" />

                    <EditText
                        android:id="@+id/mobile_number"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/contact_details_edit_text_background"
                        android:hint="Mobile Number (*)"
                        android:inputType="number"
                        android:maxLength="10"
                        android:paddingLeft="8dp"
                        android:singleLine="true" />

                    <ImageButton
                        android:id="@+id/remove_mobile"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/cross_btn"
                        android:visibility="gone" />

                    <ImageButton
                        android:id="@+id/add_mobile"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/add_btn"
                        android:visibility="visible" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="SMS Verification Number"
                    android:textColor="#3D3D3D" />

                <ImageView
                    android:id="@+id/resend_sms_img_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/resend" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="Contact Person Name (*)"
                android:textColor="#3D3D3D"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/contact_person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/contact_details_edit_text_background"
                android:hint="Contact Person Name"
                android:inputType="textCapWords"
                android:padding="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="LandLine Number"
                android:textColor="#3D3D3D"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/landline_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    
                    <TextView
                        android:id="@+id/std_code_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="4dp"
                     	 />

                    <EditText
                        android:id="@+id/landline_number"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/contact_details_edit_text_background"
                        android:hint="LandLine Number"
                        android:inputType="number"
                        android:paddingLeft="8dp"
                        android:singleLine="true" />

                    <ImageButton
                        android:id="@+id/remove_landline"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/cross_btn"
                        android:visibility="gone" />

                    <ImageButton
                        android:id="@+id/add_landline"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/add_btn"
                        android:visibility="visible" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="Email ID"
                android:textColor="#3D3D3D"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/contact_details_edit_text_background"
                android:hint="Email ID"
                android:inputType="textWebEmailAddress"
                android:padding="8dp" />

            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="Website"
                android:textColor="#3D3D3D"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/website_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/contact_details_edit_text_background"
                android:hint="Website"
                android:inputType="text"
                android:padding="8dp" />

            <Button
                android:id="@+id/verify_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/button_background"
                android:text="Verify"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
    
    <ScrollView 
        android:scrollbars="none"
        android:id="@+id/view_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >
        <include layout="@layout/datacollection_fragment_basic_details_view"/>
    </ScrollView>

</LinearLayout>